--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
            class="w-full border-2 border-blue-500 p-3 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500">
    </div>
 
-    <div id="feedback-list" class="max-w-md mx-auto mt-6"></div>
-
+    <div id="feedback-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 p-4">
+    </div>
 
     <script type="module">
     // 1. IMPORTS
@@ -160,17 +160,21 @@
               </div>` 
             : "";
 
-        list.innerHTML += `
-            <div class="bg-white p-6 mb-4 rounded-xl shadow-lg border-l-8 border-blue-500">
-                <div class="flex justify-between items-start">
-                    <span class="text-sm font-bold uppercase text-blue-600 bg-blue-100 px-2 py-1 rounded">${data.category}</span>
-                    <span class="text-gray-400 text-sm">${data.timestamp ? new Date(data.timestamp.seconds * 1000).toLocaleDateString() : 'Just now'}</span>
-                </div>
-                <h3 class="text-xl font-bold mt-2">${data.location}</h3>
-                <p class="text-gray-700 mt-2 text-lg">${data.description}</p>
-                <p class="text-sm text-gray-500 mt-2 italic">Status: ${data.status || 'pending'}</p>
-                ${adminControls}
-            </div>`;
+        // Inside renderFeed, update your card template:
+   list.innerHTML += `
+    <div class="bg-white p-6 rounded-2xl shadow-sm border border-gray-100 hover:shadow-md transition-shadow duration-300">
+        <div class="flex justify-between items-start mb-4">
+            <span class="text-[10px] font-bold uppercase tracking-wider text-blue-600 bg-blue-50 px-2 py-1 rounded-full">${data.category}</span>
+            <span class="text-gray-400 text-xs">${data.timestamp ? new Date(data.timestamp.seconds * 1000).toLocaleDateString() : 'Just now'}</span>
+        </div>
+        <h3 class="text-lg font-bold text-gray-800">${data.location}</h3>
+        <p class="text-gray-600 mt-2 text-sm leading-relaxed">${data.description}</p>
+        
+        <div class="mt-4 pt-4 border-t border-gray-50 flex items-center justify-between">
+             <span class="text-[10px] font-semibold text-gray-400 uppercase">Status: ${data.status || 'pending'}</span>
+             ${adminControls}
+        </div>
+    </div>`;
     });
 };
 
